--- a/AI-Safety-Solution/Run_alert.ipynb
+++ b/AI-Safety-Solution/Run_alert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "73817753-ac4a-4bde-8e5d-d930089768b3",
    "metadata": {},
    "outputs": [],
@@ -14,15 +14,16 @@
     "from datetime import datetime\n",
     "from ai_safety_system.keyword_detection import EMERGENCY_KEYWORDS\n",
     "from ai_safety_system.scream_detection import predict\n",
+    "from ai_safety_system.alert_sender import send_email_alert\n",
     "import sys\n",
     "import io\n",
     "if hasattr(sys.stdout, 'buffer'):\n",
-    "    sys.stdout = io.TextIOWrapper(sys.stdout.buffer, encoding='utf-8')"
+    "    sys.stdout = io.TextIOWrapper(sys.stdout.buffer, encoding='utf-8')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6e13b5f1-bafd-4943-8a58-88f1ac1d2820",
    "metadata": {},
    "outputs": [],
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "31046712-9d94-4c86-8815-915965e8afda",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0582a231-d993-4437-840e-4095e2ec01e5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "8993f357-05af-40e8-bccc-d0b7e1f9961f",
    "metadata": {},
    "outputs": [],
@@ -115,7 +116,7 @@
     "                    filename = os.path.join(date_folder, f\"{time_str}.wav\")\n",
     "                    os.rename(temp_audio_path, filename)\n",
     "                    print(f\"💾 Alert clip saved: {filename}\")\n",
-    "                    print(\"📲 Sending alert...\\n\")\n",
+    "                    print(\"Sending Emergency Alert\")\n",
     "                    time.sleep(3)\n",
     "                else:\n",
     "                    os.remove(temp_audio_path)  # Clean up if no alert\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "1f2acf42-d765-4805-91d3-3297eaa322bc",
    "metadata": {},
    "outputs": [
@@ -143,55 +144,39 @@
       "✅ Alerter Activated! Listening in real-time...\n",
       "🎤 Listening...\n",
       "⚠️ Could not understand audio.\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 96.07%\n",
+      "❌ Error extracting MFCC: partially initialized module 'numba' has no attribute 'core' (most likely due to a circular import)\n",
+      "⚠️ Could not extract features.\n",
+      "✅ No emergency.\n",
+      "\n",
+      "🎤 Listening...\n",
+      "🗣️ Detected Speech: 'file Kaise'\n",
+      "❌ Error extracting MFCC: module 'numba' has no attribute 'core'\n",
+      "⚠️ Could not extract features.\n",
       "✅ No emergency.\n",
       "\n",
       "🎤 Listening...\n",
       "⚠️ Could not understand audio.\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 99.98%\n",
+      "❌ Error extracting MFCC: module 'numba' has no attribute 'core'\n",
+      "⚠️ Could not extract features.\n",
       "✅ No emergency.\n",
       "\n",
       "🎤 Listening...\n",
       "⚠️ Could not understand audio.\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 99.78%\n",
+      "❌ Error extracting MFCC: module 'numba' has no attribute 'core'\n",
+      "⚠️ Could not extract features.\n",
+      "✅ No emergency.\n",
+      "\n",
+      "🎤 Listening...\n",
+      "🗣️ Detected Speech: 'hello'\n",
+      "❌ Error extracting MFCC: module 'numba' has no attribute 'core'\n",
+      "⚠️ Could not extract features.\n",
       "✅ No emergency.\n",
       "\n",
       "🎤 Listening...\n",
       "⚠️ Could not understand audio.\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 99.99%\n",
+      "❌ Error extracting MFCC: module 'numba' has no attribute 'core'\n",
+      "⚠️ Could not extract features.\n",
       "✅ No emergency.\n",
-      "\n",
-      "🎤 Listening...\n",
-      "🗣️ Detected Speech: 'help help'\n",
-      "🔑 Emergency keyword detected: 'help'\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 99.96%\n",
-      "\n",
-      "🚨 EMERGENCY TRIGGERED!\n",
-      "🔑 Reason: Keyword\n",
-      "💾 Alert clip saved: saved_audio\\2025-04-13\\02-26-20.wav\n",
-      "📲 Sending alert...\n",
-      "\n",
-      "🎤 Listening...\n",
-      "⚠️ Could not understand audio.\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 100.00%\n",
-      "✅ No emergency.\n",
-      "\n",
-      "🎤 Listening...\n",
-      "🗣️ Detected Speech: 'help help semi help'\n",
-      "🔑 Emergency keyword detected: 'help'\n",
-      "🎧 Prediction: NON-SCREAM\n",
-      "📈 Confidence: 99.94%\n",
-      "\n",
-      "🚨 EMERGENCY TRIGGERED!\n",
-      "🔑 Reason: Keyword\n",
-      "💾 Alert clip saved: saved_audio\\2025-04-13\\02-26-31.wav\n",
-      "📲 Sending alert...\n",
       "\n",
       "🎤 Listening...\n",
       "\n",
